unpackaged/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <description>Shipment records to be used by legacy Visit process to send inventory items to events/shows.</description>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SHP-{00000000}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>