unpackaged/main/default/objects/Shipment__c/fields/ExhibitionOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>