unpackaged/main/default/objects/Shipment__c/fields/ShowName__c.field-meta.xml
<CustomField>
    <fullName>ShowName__c</fullName>
    <formula>OrderID__r.Opportunity.Show_Name_ref_Occ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Name</label>
    <type>Text</type>
</CustomField>