unpackaged/main/default/objects/Shipment__c/fields/Total_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Kg__c</fullName>
    <label>Total Weight (Kg)</label>
    <summarizedField>ShipmentItem__c.Weight_Kg__c</summarizedField>
    <summaryForeignKey>ShipmentItem__c.Shipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>