unpackaged/main/default/objects/Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountID__c</columns>
    <columns>Contact__c</columns>
    <columns>ShipmentStatus__c</columns>
    <columns>ShowName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>