unpackaged/main/default/objects/Shipment__c/listViews/All_Completed.listView-meta.xml
<ListView>
    <fullName>All_Completed</fullName>
    <columns>NAME</columns>
    <columns>AccountID__c</columns>
    <columns>Contact__c</columns>
    <columns>ShipmentStatus__c</columns>
    <columns>ShowName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ShipmentStatus__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>All Completed</label>
    <language>en_US</language>
</ListView>